--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/src/assets/logo.png" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Title & Basic Meta -->
     <title>Easy Business</title>
+    <meta name="description" content="Easy Business is a modern business solution platform providing seamless tools for entrepreneurs and companies." />
+    <meta name="author" content="Easy Business Team" />
+    <meta name="keywords" content="business, startup, management, easy business, solutions, platform" />
+
+    <meta name="theme-color" content="#0A84FF" />
+
+    <meta property="og:title" content="Easy Business" />
+    <meta property="og:description" content="A smart solution for modern businesses. Manage your operations with ease." />
+    <meta property="og:image" content="/src/assets/preview.png" />
+    <meta property="og:url" content="https://easybusiness.example.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Easy Business" />
+    <meta name="twitter:description" content="A smart solution for modern businesses. Manage your operations with ease." />
+    <meta name="twitter:image" content="/src/assets/preview.png" />
+    <meta name="twitter:site" content="@easybusiness" />
+
+    <meta name="robots" content="index, follow" />
+
+    <link rel="canonical" href="https://easybusiness.example.com/" />
   </head>
   <body>
     <div id="root"></div>
