--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
     <meta name="robots" content="index, follow" />
 
+    <!-- iOS Smart App Banner -->
+    <meta name="apple-itunes-app" content="app-id=6746033485, app-argument=https://apps.apple.com/az/app/easybusiness-your-distributor/id6746033485" />
+
     <link rel="canonical" href="https://easybusiness.example.com/" />
   </head>
   <body>
